--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #f2f7ff;
 }
 section {
+  display: block;
   margin-top: 30px;
   margin-left: 30px;
   padding: 25px 20px;
@@ -30,13 +31,16 @@ h2 {
 .weather-icon {
   display: inline;
   margin: 8px;
-  color: #001e47;
+  color: #b7b7b7;
   font-size: 40px;
 }
 input {
   display: inline;
   margin: auto;
   margin-right: 6px;
+  border-color: #001e47;
+  border-radius: 4px;
+  border-width: 1.5px;
 }
 .submit-button {
   background-color: #f2f7ff;
@@ -45,18 +49,20 @@ input {
 .date-time {
   display: block;
   margin-top: 11px;
+  color: #001e47;
 }
 ul {
   margin-top: 20px;
   list-style: none;
   text-align: left;
   line-height: 30px;
+  color: #001e47;
 }
 li::before {
   content: "🌦 ";
 }
 button {
-  margin: 8px;
+  margin: 5px;
   padding: 10px 15px;
   text-align: center;
   background: #f2f7ff;
@@ -77,8 +83,8 @@ button:hover {
   margin: 0 auto;
   text-align: center;
   color: #001e47;
+  font-size: larger;
 }
-
 footer {
   display: block;
   margin-top: 200px;
